--- a/package.json
+++ b/package.json
@@ -4,14 +4,13 @@
   "description": "Twitch API Authentication Example using Node, Express, and Passport.",
   "main": "index.js",
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^4.15.2",
     "express-session": "^1.15.2",
-    "handlebars": "^4.0.6",
     "passport": "^0.3.2",
     "passport-oauth": "^1.0.0",
     "request": "^2.81.0"
   },
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
